set(TARGET ominix-diffusion-cli)

add_executable(${TARGET} main.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_link_libraries(${TARGET} PRIVATE stable-diffusion ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(${TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
if (DEFINED ENV{ASCEND_TOOLKIT_HOME})
    target_link_directories(${TARGET} PRIVATE $ENV{ASCEND_TOOLKIT_HOME}/lib64)
endif()
target_compile_features(${TARGET} PUBLIC c_std_11 cxx_std_17)